# todo-team-b

./: .gitignore  Jenkinsfile  SETJenkins.md  package-lock.json  package.json
.github/: CODEOWNERS
Jenkins/: Dockerfile  Jenkinsfile  Jenkins作業ログ.md  SETJenkins.md  requirements.txt
front/: .gitignore  README.md  next.config.js  package-lock.json  package.json  テーブル更新問題解決作業ログ.md
front/app/: page.tsx
front/app/Login/: page.tsx
migration/: env.py
practical-fastapi/: .env.sample  Dockerfile  README.md  Seeder処理作業ログ.md  docker-compose.yml  logging.json  pyproject.toml  pytest.ini  requirements.txt  マイグレーション作業ログ.md  文字数を超えた時の挙動確認作業ログ.md
practical-fastapi/migration/: env.py
practical-fastapi/migration/versions/: 10d0eb272386_create_tables.py  21c8012d2c97_creat_table.py  2528d91131ee_creat_table.py  3007845c0896_.py  557f2838dcd8_.py  947de0195030_.py  ca6e104db80f_.py  cf796608283f_postgres_create_todo_table.py  e59f04331c0f_.py  f1d49bc902f0_.py  f6fff35b7139_.py
practical-fastapi/seed/: seeder.py
practical-fastapi/seed/versions/: 19a7e79e655b.json
practical-fastapi/src/api/v1/: tag.py  user.py
practical-fastapi/src/app/: database.py  main.py  router.py  settings.py
practical-fastapi/src/crud/: tag.py  todo.py  user.py
practical-fastapi/src/models/: tag.py  todo.py  todo_tag.py  user.py
practical-fastapi/src/schemas/: schema.py
practical-fastapi/src/test/: conftest.py  test_main.py  test_ono.py  test_tags.py  test_todos.py  test_user.py
practical-fastapi/tool/: thunder-collection.json
src/crud/: todo.py
src/models/: tag.py  todo_tag.py
(+69 files in other folders)
